# local_binary_patterns

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  main.py  notebook.ipynb  pyproject.toml  requirements.txt  test.ipynb  testimports.ipynb  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
local_binary_patterns/: __init__.py  chi_square_distance.py  local_binary_patterns.py
src/local_binary_patterns/: __init__.py
tests/: __init__.py  test_local_binary_patterns2.py
