[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local_binary_patterns2"
version = "0.1.0"
description = "In this project, I will use local binary patterns (LBP) to build a system that classifies textured images."
readme = "README.rst"
authors = [
  {name = "Abel Kidane Haile", email = "abelkidanehaile@gmail.com"}
]
maintainers = [
  {name = "Abel Kidane Haile", email = "abelkidanehaile@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/AbelKidaneHaile/local_binary_patterns2/issues"
changelog = "https://github.com/AbelKidaneHaile/local_binary_patterns2/blob/master/changelog.md"
homepage = "https://github.com/AbelKidaneHaile/local_binary_patterns2"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

